src/objects/TR1__Job_Board_Search_Options__c.object
<CustomObject>
    <fields>
        <fullName>TR1__ExecutivePlacementsJobType__c</fullName>
        <label>JobType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Full time</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Part time</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__ExecutivePlcaementsCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>ustria</fullName>
                </value>
                <value>
                    <fullName>Azerbaidjan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__IndeddTitleofLastjob__c</fullName>
        <label>Title of last Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IndeedCompanyofanyjob__c</fullName>
        <label>Company of Any Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IndeedCompanyoflatestjob__c</fullName>
        <label>Company of Latest Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IndeedCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgie</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Espana</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Nederland</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__IndeedEducation__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any degree</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Associates</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__IndeedFielsOfStudy__c</fullName>
        <label>Field of Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IndeedMaxResults__c</fullName>
        <label>Max Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__IndeedRadius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>only in</fullName>
                </value>
                <value>
                    <fullName>within 5 miles of</fullName>
                </value>
                <value>
                    <fullName>within 10 miles of</fullName>
                </value>
                <value>
                    <fullName>within 15 miles of</fullName>
                </value>
                <value>
                    <fullName>within 20 miles of</fullName>
                </value>
                <value>
                    <fullName>within 25 miles of</fullName>
                </value>
                <value>
                    <fullName>witin 50 miels of</fullName>
                </value>
                <value>
                    <fullName>within 100 miles of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__IndeedTitleofanyJob__c</fullName>
        <label>Title of any Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IndeedWorkExperience__c</fullName>
        <label>WorkExperience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any amount</fullName>
                </value>
                <value>
                    <fullName>Less than 1 year</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>3-6 years</fullName>
                </value>
                <value>
                    <fullName>6-10 years</fullName>
                </value>
                <value>
                    <fullName>more than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__JobTitle__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Code__c</fullName>
        <formula>TEXT(TR1__Job_Board__r.TR1__Job_Board_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Board Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Name__c</fullName>
        <formula>TEXT(TR1__Job_Board__r.TR1__Job_Board__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Board Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Board</label>
        <referenceTo>TR1__Job_Board__c</referenceTo>
        <relationshipLabel>Job Board Search Options</relationshipLabel>
        <relationshipName>Job_Board_Search_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicCompanyScope__c</fullName>
        <label>Company Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current or past</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Past not current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicCountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anywhere</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua/Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicIndustry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All industries</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Airlines/Aviation</fullName>
                </value>
                <value>
                    <fullName>Alt Dispute Resolution</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Fashion</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts and Crafts</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation &amp; Aerospace</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcast Media</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Business Supplies</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Civic Organization</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Computer Security</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Networking</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicMaxResults__c</fullName>
        <label>Max Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <default>true</default>
                    <label>100</label>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicRadius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 mi (15km)</fullName>
                </value>
                <value>
                    <fullName>25 mi (40 km)</fullName>
                    <default>true</default>
                    <label>25 mi (40 km)</label>
                </value>
                <value>
                    <fullName>35 mi (55 km)</fullName>
                </value>
                <value>
                    <fullName>50 mi (80 km)</fullName>
                </value>
                <value>
                    <fullName>75 mi (120 km)</fullName>
                </value>
                <value>
                    <fullName>100 mi (160 km)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInBasicTitleScope__c</fullName>
        <label>Title Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current or past</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Past not current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInConnection__c</fullName>
        <label>LinkedIn Connection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All LinkedIn Members</fullName>
                    <default>true</default>
                    <label>All LinkedIn Members</label>
                </value>
                <value>
                    <fullName>1st Connections</fullName>
                </value>
                <value>
                    <fullName>2nd Connections</fullName>
                </value>
                <value>
                    <fullName>Group Members</fullName>
                </value>
                <value>
                    <fullName>3rd + Everyone Else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInRecruiterCategory__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any Function</fullName>
                </value>
                <value>
                    <fullName>Academics</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Business development</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human resources</fullName>
                </value>
                <value>
                    <fullName>Information technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Public relations</fullName>
                </value>
                <value>
                    <fullName>Real estate</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInRecruiterCompanyScope__c</fullName>
        <label>Company Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current or past</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Past not current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInRecruiterCountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Venezuela</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInRecruiterIndustry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All industries</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Airlines/Aviation</fullName>
                </value>
                <value>
                    <fullName>Alt Dispute Resolution</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Animation</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Fashion</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts and Crafts</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation &amp; Aerospace</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Broadcast Media</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Business Supplies</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Civic Organization</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Computer Security</fullName>
                </value>
                <value>
                    <fullName>Computer Games</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware</fullName>
                </value>
                <value>
                    <fullName>Computer Networking</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__LinkedInRecruiterLocation__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anywhere</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua/Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>